--- a/templates/faceDetection/register.html
+++ b/templates/faceDetection/register.html
@@ -126,7 +126,7 @@ font-size: 30px;
 {#    <input type="reset" value="Clear">#}
     {{ form.as_p }}
     <input type="submit" value="Register" class="btn btn-warning"><br><br>
-    <a href="{% url 'login' %}"><input value="Login" class="btn btn-danger"> </button></a>
+    <a href="{% url 'login' %}"><input type="button" value="Login" class="btn btn-danger"/> </a>
 </form>
 
     </div>
